# foot-etl

./: .gitignore  README.md  data_exploration.ipynb  dbt_project.yml  kpi.ipynb  main.py  pipeline.py  pyproject.toml
models/staging/: schema.yml  stg_matches.sql  stg_stadiums.py  stg_teams.py  stg_tv_channels.py  stg_world_cup_matches.sql
seeds/: schema.yml
