[project]
name = "foot-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "mashumaro==3.13.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=tests --cov-report=term-missing --cov-report=html:htmlcov"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tests"]
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = false
